<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/www2"
    android:layout_height="fill_parent"
    >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/title1"
        android:id="@+id/mRlww1"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
               style="@style/text1"
               android:text="@string/c23"
            />
        </RelativeLayout>
        
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/mRlww1"
        android:layout_marginTop="15dp"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
               android:paddingLeft="15dp"
                android:paddingRight="15dp"
            
            >
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@drawable/a5"
                >
                <ImageView 
                    android:layout_width="28dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/a6"
                    android:id="@+id/mIv1"
                    />
                <EditText 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/c24"
                    android:id="@+id/mEt1"
                    android:paddingLeft="8dp"
                  android:layout_toRightOf="@id/mIv1"
                    />
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/a5"
                >
                <ImageView 
                    android:layout_width="28dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/a7"
                    android:id="@+id/mIv2"
                    />
                <EditText 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/c25"
                    android:id="@+id/mEt2"
                    android:paddingLeft="8dp"
                  android:layout_toRightOf="@id/mIv2"
                    />
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/a8"
                >
                <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
               style="@style/text1"
               android:id="@+id/mBt1"
               android:background="@null"
               android:text="@string/c26"
                    /> 
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/a8"
                >
                <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
               style="@style/text1"
               android:id="@+id/mBt2"
               android:background="@null"
               android:text="@string/c27"
                    /> 
            </RelativeLayout>
            </LinearLayout>
        
    </ScrollView>
     <ProgressBar
            android:id="@+id/progressBar_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    
    
</RelativeLayout>
