<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:background="@color/www2"    android:layout_height="match_parent"    android:orientation="vertical"   >        <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="50dp"        android:background="@drawable/title1"        >        <RelativeLayout             android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerInParent="true"            >                        <TextView                 android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/c43"                style="@style/text1"                android:layout_centerInParent="true"                />                               </RelativeLayout>        </RelativeLayout>                  <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="70dp"        android:layout_marginLeft="18dp"        >        <ImageView             android:id="@+id/mIv1"            android:layout_width="44dp"            android:layout_height="44dp"            android:layout_centerVertical="true"            android:src="@drawable/a21"            />        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mIv1"               android:layout_marginLeft="6dp"               android:id="@+id/mTv1"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c44"               />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />   <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="70dp"        android:layout_marginLeft="18dp"        >        <ImageView             android:id="@+id/mIv2"            android:layout_width="44dp"            android:layout_height="44dp"            android:layout_centerVertical="true"            android:src="@drawable/a23"            />        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mIv2"               android:layout_marginLeft="6dp"               android:id="@+id/mTv2"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c45"               />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />           <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="70dp"        android:layout_marginLeft="18dp"        >        <ImageView             android:id="@+id/mIv3"            android:layout_width="44dp"            android:layout_height="44dp"            android:layout_centerVertical="true"            android:src="@drawable/a24"            />        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mIv3"               android:layout_marginLeft="6dp"               android:id="@+id/mTv3"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c46"               />                </RelativeLayout>        <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x2"            />           <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="70dp"        android:layout_marginLeft="18dp"        >        <ImageView             android:id="@+id/mIv4"            android:layout_width="44dp"            android:layout_height="44dp"            android:layout_centerVertical="true"            android:src="@drawable/a25"            />        <TextView                android:layout_width="wrap_content"               android:layout_height="wrap_content"               android:layout_toRightOf="@id/mIv4"               android:layout_marginLeft="6dp"               android:id="@+id/mTv4"               android:layout_centerVertical="true"               style="@style/text2"               android:text="@string/c47"               />                </RelativeLayout>                <ImageView             android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:src="@drawable/x1"            />      </LinearLayout>