<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:background="@color/www2"    android:fillViewport="true"        android:layout_height="match_parent"    android:orientation="vertical"   >    <LinearLayout         android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:layout_marginLeft="15dp"        android:layout_marginRight="15dp"        android:layout_marginTop="20dp"        android:orientation="horizontal"        >            <RelativeLayout         android:layout_weight="1"        android:layout_height="fill_parent"        android:layout_width="0dp"        >          <RelativeLayout              android:layout_width="fill_parent"              android:layout_height="40dp"              android:id="@+id/mRl1"              android:layout_marginTop="20dp"              >              <ImageView                   android:layout_centerHorizontal="true"                  android:layout_width="wrap_content"                  android:layout_height="40dp"                  android:src="@drawable/l1"                  />          </RelativeLayout>                      <View                   android:layout_width="1dp"                                    android:layout_centerHorizontal="true"                  android:layout_below="@id/mRl1"                   android:id="@+id/mIv2"                  android:layout_height="60dp"                  android:background="@color/www1"                  />                    <RelativeLayout              android:layout_width="fill_parent"              android:layout_height="40dp"              android:id="@+id/mRl2"              android:layout_below="@id/mIv2"              >              <ImageView                   android:layout_centerHorizontal="true"                  android:layout_width="wrap_content"                  android:layout_height="40dp"                  android:src="@drawable/l2"                  />          </RelativeLayout>                      <View                   android:layout_width="1dp"                                    android:layout_centerHorizontal="true"                  android:layout_below="@id/mRl2"                   android:id="@+id/mIv3"                  android:layout_height="60dp"                  android:background="@color/www1"                  />                                                                           <RelativeLayout              android:layout_width="fill_parent"              android:layout_height="40dp"              android:id="@+id/mRl3"              android:layout_below="@id/mIv3"              >              <ImageView                   android:layout_centerHorizontal="true"                  android:layout_width="wrap_content"                  android:layout_height="40dp"                  android:src="@drawable/l3"                  />          </RelativeLayout>                      <View                   android:layout_width="1dp"                                    android:layout_centerHorizontal="true"                  android:layout_below="@id/mRl3"                   android:id="@+id/mIv4"                  android:layout_height="60dp"                  android:background="@color/www1"                  />                   <RelativeLayout              android:layout_width="fill_parent"              android:layout_height="40dp"              android:id="@+id/mRl4"              android:layout_below="@id/mIv4"              >              <ImageView                   android:layout_centerHorizontal="true"                  android:layout_width="wrap_content"                  android:layout_height="40dp"                  android:src="@drawable/l4"                  />          </RelativeLayout>                      <View                   android:layout_width="1dp"                                    android:layout_centerHorizontal="true"                  android:layout_below="@id/mRl4"                   android:id="@+id/mIv5"                  android:layout_height="fill_parent"                  android:background="@color/www1"                  />    </RelativeLayout>    <RelativeLayout         android:layout_weight="5"        android:layout_marginRight="20dp"        android:layout_height="fill_parent"        android:layout_width="0dp"        >            <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="80dp"        android:id="@+id/mRl1a"        android:background="@drawable/a78"        >                    <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:id="@+id/mTv1a"               android:layout_marginRight="25dp"               android:text="@string/c77"               android:layout_centerVertical="true"               android:layout_alignParentRight="true"            />            <LinearLayout         android:layout_toLeftOf="@id/mTv1a"        android:layout_centerVertical="true"        android:layout_marginLeft="25dp"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text2d"               android:id="@+id/mTv1a1"               android:text="@string/c69"            />        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:layout_marginTop="10dp"               android:id="@+id/mTv1a2"               android:text="@string/c70"            />        </LinearLayout>      </RelativeLayout>        <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="80dp"        android:layout_below="@id/mRl1a"        android:id="@+id/mRl1b"        android:background="@drawable/a78"        android:layout_marginTop="20dp"        >                    <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:id="@+id/mTv1b"               android:layout_marginRight="25dp"               android:text="@string/c77"               android:layout_centerVertical="true"               android:layout_alignParentRight="true"            />            <LinearLayout         android:layout_toLeftOf="@id/mTv1b"        android:layout_centerVertical="true"        android:layout_marginLeft="25dp"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text2d"               android:id="@+id/mTv1b1"               android:text="@string/c71"            />        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:layout_marginTop="10dp"               android:id="@+id/mTv1b2"               android:text="@string/c72"            />        </LinearLayout>      </RelativeLayout>            <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="80dp"        android:layout_below="@id/mRl1b"        android:id="@+id/mRl1c"        android:background="@drawable/a78"        android:layout_marginTop="20dp"        >                    <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:id="@+id/mTv1c"               android:layout_marginRight="25dp"               android:text="@string/c77"               android:layout_centerVertical="true"               android:layout_alignParentRight="true"            />            <LinearLayout         android:layout_toLeftOf="@id/mTv1c"        android:layout_centerVertical="true"        android:layout_marginLeft="25dp"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text2d"               android:id="@+id/mTv1c1"               android:text="@string/c73"            />        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:layout_marginTop="10dp"               android:id="@+id/mTv1c2"               android:text="@string/c74"            />        </LinearLayout>      </RelativeLayout>                     <RelativeLayout         android:layout_width="fill_parent"        android:layout_height="80dp"        android:layout_below="@id/mRl1c"        android:id="@+id/mRl1d"        android:background="@drawable/a78"        android:layout_marginTop="20dp"        >                    <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:id="@+id/mTv1d"               android:layout_marginRight="25dp"               android:text="@string/c77"               android:layout_centerVertical="true"               android:layout_alignParentRight="true"            />            <LinearLayout         android:layout_centerVertical="true"        android:layout_marginLeft="25dp"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text2d"               android:id="@+id/mTv1d1"               android:text="@string/c75"            />        <TextView             android:layout_width="wrap_content"            android:layout_height="wrap_content"               style="@style/text24"               android:layout_marginTop="10dp"               android:id="@+id/mTv1d2"               android:text="@string/c76"            />        </LinearLayout>      </RelativeLayout>            </RelativeLayout>                                        </LinearLayout>    </ScrollView>