<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="fill_parent"    android:background="@color/transparent"    android:layout_height="wrap_content"   >   <LinearLayout        android:orientation="horizontal"       android:layout_width="fill_parent"              android:layout_height="wrap_content"       >       <View            android:layout_width="0dp"           android:layout_height="1dp"           android:layout_weight="1"           />       <LinearLayout            android:layout_width="0dp"           android:layout_weight="4"                  android:background="@color/www2"                      android:layout_height="wrap_content"           android:orientation="vertical"           >           <ImageView                android:layout_width="fill_parent"               android:src="@drawable/title"               android:layout_height="30dp"               android:scaleType="fitXY"               />           <TextView                android:layout_width="fill_parent"               android:layout_height="wrap_content"               android:gravity="center"               style="@style/text4"               android:layout_marginTop="15dp"               android:text="@string/c18"               />           <LinearLayout               android:orientation="horizontal"                               android:layout_marginTop="15dp"               android:layout_width="fill_parent"               android:layout_height="25dp"               android:paddingLeft="10dp"               android:paddingRight="10dp"               >               <Button                android:layout_width="0dp"               android:layout_weight="1"               android:layout_height="fill_parent"               android:layout_centerInParent="true"               android:text="@string/c19"                style="@style/text23"                android:gravity="center"                android:id="@+id/mBtSure"               android:background="@drawable/t8"               />               <View                                   android:layout_width="0dp"               android:layout_weight="1"                                  android:layout_height="fill_parent"                                      />               <Button                android:layout_width="0dp"               android:layout_weight="1"               android:layout_height="fill_parent"               android:layout_centerInParent="true"               android:text="@string/c20"                style="@style/text23"                                android:id="@+id/mBtCancel"                                android:gravity="center"               android:background="@drawable/t8"               />               </LinearLayout>               <View                    android:layout_width="fill_parent"                   android:layout_height="10dp"                   />       </LinearLayout>       <View            android:layout_width="0dp"           android:layout_height="1dp"           android:layout_weight="1"           />       </LinearLayout>         </LinearLayout>